--- a/chat/css/default.css
+++ b/chat/css/default.css
@@ -9,7 +9,7 @@
        font-family: 'Caveat Brush', sans-serif;
        font-size: 25px;
        margin-top: 200px;
-   }
+   } /*dizajn okna chatu*/
    
    #userBox {
        width: 86%;
@@ -20,7 +20,7 @@
        font-size: 30px;
        margin-top: 40px;
        flex: 0 0 auto;
-   }
+   } /*dizajn okna wiadomości*/
    
    .send {
        width: 10%;
@@ -44,16 +44,16 @@
        box-shadow: 0 -3px white;
        transition: 0.2s;
        flex: 0 0 auto;
-   }
+   } /*dizajn przycisku "Wyślij"*/
    
    .send:hover {
        background: rgb(53, 167, 110);
-   }
+   } /*animacja przycisku "Wyślij" po najechaniu"*/
    
    .send:active {
        background: rgb(33, 147, 90);
        box-shadow: 0 3px rgb(33, 147, 90) inset;
-   }
+   } /*animacja przycisku "Wyślij" po nacisnięciu"*/
    
    #title {
        align-content: center;
@@ -64,10 +64,9 @@
        -webkit-text-stroke-color: black;
        font-family: 'Oleo Script', Helvetica, sans-serif;
        font-weight: bold;
-       /*margin: 10px 350px, 70px, 0px;*/
        margin-top: 10px;
        top: 10px;
        right: 30px;
-       position: fixed;
+       position: fixed; 
    }
-   /*что-то не работает*/
+   /*animacja nazwy pliku*/
